[package]
name = "tezcatlipoca-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version ="1.48.0", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

